Update Readme.md
Added comprehensive overview of Java OOP concepts and repo structure.